--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,17 @@
 	},
 	"autoload" : {
 		"psr-4" : {
-			"Orkan\\" : ""
+			"Orkan\\" : "src/"
 		}
-	}
+	},
+	"autoload-dev" : {
+		"psr-4" : {
+			"Orkan\\Tests" : "tests/"
+		}
+	},
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.x-dev"
+        }
+    }
 }
