utils: add Orkan\Tests\Utils to composer autoloader

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
 	},
 	"autoload" : {
 		"psr-4" : {
-			"Orkan\\" : "src/"
+			"Orkan\\" : "src/",
+			"Orkan\\Tests\\" : "tests/"
 		}
 	},
 	"extra" : {
